APIの登録の追加
